Fix spacing of forum row and hover problems for descriptions

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -150,12 +150,14 @@
   }
 }
 .forum-row {
-  padding: 6px 6px 8px;
+  padding: 0 6px;
   background: #ffffff;
   border-bottom: 1px solid #cccccc;
 }
 .forum-row hgroup {
-  margin-top: 6px;
+  margin: 0;
+  padding-top: 8px;
+  padding-bottom: 6px;
 }
 .forum-row .h5 {
   margin: 0;
@@ -168,9 +170,6 @@
 }
 .forum-row:hover .label {
   color: #e6e6e6;
-}
-.forum-row:hover .forum-recent > a {
-  color: #333333;
 }
 .forum:last-of-type .forum-row:last-of-type {
   border-bottom: 1px solid #dddddd;
@@ -211,6 +210,11 @@
   margin-left: 12px;
   font-size: 10px;
   text-transform: uppercase;
+}
+@media (min-width: 768px) {
+  .forum-labels {
+    margin-top: -2px;
+  }
 }
 .locked,
 .unread,
@@ -277,7 +281,7 @@
   }
 }
 .forum-recent {
-  padding-top: 4px;
+  margin-top: 5px;
   margin-bottom: 0;
 }
 .forum-recent dfn {
@@ -302,8 +306,6 @@
   top: -15px;
 }
 .forum-sub {
-  position: relative;
-  top: 8px;
   margin-left: -6px;
   margin-right: -6px;
 }
@@ -322,6 +324,9 @@
   content: "";
 }
 @media (min-width: 768px) {
+  .forum-sub {
+    height: 0;
+  }
   .forum-row:last-of-type .forum-sub ul {
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
